# eom

./: .gitignore  Cargo.toml  LICENSE  README.md  makefile
.github/workflows/: rust.yml
ref_rst/: ode_msd_model.csv
src/: lib.rs  main.rs  traits.rs  write_csv.rs
src/explicit/: rk4.rs
src/operator/: config.rs  cpu_time.rs  mod.rs
src/ordinary/: mod.rs  msd_model.rs  msd_model_bac.rs
src/schemes/: explicit.rs
tests/: msd_model.py
