[package]
name = "eom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gnuplot = "0.0.37"
chrono = "0.4.19"
# ndarray-linalg = "0.14.1"
num-traits  = { version = "0.2.15",  default-features = false }
num-complex = { version = "0.4.2",  default-features = false }
derive-new  = { version = "0.5.9",  default-features = false }
ndarray     = { version = "0.15.4", default-features = false }
fftw        = { version = "0.7.0",  default-features = false }